feat: add db to store edc details and chat details and impl storing logic